--- a/index.html
+++ b/index.html
@@ -1534,6 +1534,16 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
           </div>
 
           <!-- hidden others -->
+    <div class="cert-card card fade-in cert-hidden">
+            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera%20-%20Power%20BI%20Introduction%20LO2XHKFW1H52-1.png" alt="Power BI Introduction" loading="lazy" /></div>
+            <div class="cert-content">
+              <h3 class="cert-title">Power BI Introduction</h3>
+              <p class="cert-issuer">Coursera</p>
+              <p class="cert-date">2025</p>
+              <a href="./documents/certifications/Coursera - Power BI Introduction LO2XHKFW1H52.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
+            </div>
+          </div>
+
           <div class="cert-card card fade-in cert-hidden">
             <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Tableau%20Certified%20Data%20Analyst%20certificate.png" alt="Tableau Certified Data Analyst" loading="lazy" /></div>
             <div class="cert-content">
@@ -1555,32 +1565,22 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
           </div>
 
           <div class="cert-card card fade-in cert-hidden">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera%20-%20Power%20BI%20Introduction%20LO2XHKFW1H52-1.png" alt="Power BI Introduction" loading="lazy" /></div>
-            <div class="cert-content">
-              <h3 class="cert-title">Power BI Introduction</h3>
-              <p class="cert-issuer">Coursera</p>
-              <p class="cert-date">2024</p>
-              <a href="./documents/certifications/Coursera - Power BI Introduction LO2XHKFW1H52.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
-            </div>
-          </div>
-
-          <div class="cert-card card fade-in cert-hidden">
             <div class="cert-image"><img src="./images/certifications/thumbnail%20images/AWS%20Machine%20Learning%20Services.png" alt="Amazon Web Services" loading="lazy" /></div>
             <div class="cert-content">
-              <h3 class="cert-title">Amazon Web Services</h3>
-              <p class="cert-issuer">AWS</p>
-              <p class="cert-date">2022</p>
-              <a href="./documents/certifications/AWS_Certificates.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
+              <h3 class="cert-title">AWS- AI and Clinical Research</h3>
+              <p class="cert-issuer">Amazon Web Services (AWS)</p>
+              <p class="cert-date">2021</p>
+              <a href="./documents/certifications/AWS_Certificates.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificates</a>
             </div>
           </div>
 
           <div class="cert-card card fade-in cert-hidden">
             <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Proficiency-%20Clinical%20Trials%20%26%20Monitoring%20certifications-%20Sahil%20Walia-1.png" alt="Clinical Trials & Monitoring Proficiency" loading="lazy" /></div>
             <div class="cert-content">
-              <h3 class="cert-title">Clinical Trials & Monitoring Proficiency</h3>
-              <p class="cert-issuer">Professional Certification</p>
-              <p class="cert-date">2022</p>
-              <a href="./documents/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
+              <h3 class="cert-title">Clinical Research Proficiency</h3>
+              <p class="cert-issuer">Association of Clinical Research Professionals (ACRP)</p>
+              <p class="cert-date">2021</p>
+              <a href="./documents/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificates</a>
             </div>
           </div>
 
