--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
             </div>
           <div class="stat-item">
            <div class="stat-number" data-count="8000" data-suffix="+">0</div>
-           <div class="stat-label">Linkedin Members Reached</div>
+           <div class="stat-label">LinkedIn Members Reached</div>
           </div>
           </div>
         </div>
@@ -1779,8 +1779,8 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
             <h4>Message Sent Successfully!</h4>
             <p>Thanks for reaching out. I'll get back to you shortly.</p>
             <div class="success-actions" style="display:flex;flex-direction:column;gap:.6rem">
-              <a href="mailto:sahilwalia2598@gmail.com" class="fallback-link">📧 Email Directly</a>
-              <a href="https://linkedin.com/in/sahilwalia1" target="_blank" rel="noopener" class="fallback-link">💼 Connect on LinkedIn</a>
+              <a href="mailto:sahilwalia2598@gmail.com" class="fallback-link">Email Me</a>
+              <a href="https://linkedin.com/in/sahilwalia1" target="_blank" rel="noopener" class="fallback-link">Connect on LinkedIn</a>
             </div>
           </div>
         </div>
