--- a/index.html
+++ b/index.html
@@ -545,12 +545,12 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 }
 .loader-overlay.hidden{opacity:0;visibility:hidden}
 .loader-backdrop{position:absolute;inset:0;background:linear-gradient(135deg,var(--primary-purple),var(--primary-blue));opacity:.08}
-.loader-main{position:absolute;top:25%;left:50%;transform:translateX(-50%);text-align:center;color:var(--text-primary);z-index:4;width:100%}
+.loader-main{position:absolute;top:15%;left:50%;transform:translateX(-50%);text-align:center;color:var(--text-primary);z-index:4;width:100%}
 .loader-main .loader-spinner{width:60px;height:60px;border:3px solid var(--border-color);border-top:3px solid var(--primary-purple);border-radius:50%;animation:loaderSpin 1s linear infinite;margin:0 auto var(--space-md)}
 .loader-main .loader-text{display:none}
 .loader-main .loader-subtext{
-  font-size:var(--font-size-lg);font-weight:600;opacity:0;animation:fadeInUp .6s ease forwards .4s;color:var(--bg-secondary);
-  text-shadow:0 1px 3px rgba(0,0,0,.6);margin-top:var(--space-xs);line-height:1.4;
+  font-size:var(--font-size-3xl);font-weight:600;opacity:0;animation:fadeInUp .6s ease forwards .4s;color:var(--text-primary);
+  text-shadow:0 1px 3px rgba(234, 231, 231, 0.6);margin-top:var(--space-xs);line-height:1.4;
 }
 [data-theme="dark"] .loader-main .loader-subtext{color:var(--accent-purple);text-shadow:0 1px 3px rgba(124,58,237,.3)}
 /* Introduction Cards */
@@ -1631,7 +1631,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
       <div class="interest-card card fade-in">
         <div class="interest-image"><img src="./images/qbdc champion.png" alt="Automotive Engineering" loading="lazy" /></div>
         <h3 style="color:var(--accent-purple);margin-bottom:1rem">Automotive Engineering</h3>
-        <p style="color:var(--text-secondary)">Lifelong motorsports enthusiast with extensive experience in student motorsports. Led Team Enigmatic Plodder through multiple collegiate championships, applying data‑driven performance optimization to racing dynamics.</p>
+        <p style="color:var(--text-secondary)">Lifelong motorsports enthusiast with extensive experience in student motorsports. Led Team Enigmatic Plodder through multiple collegiate championships, applying data‑driven performance optimization to off-roading dynamics.</p>
         <div style="margin-top:1.5rem;">
           <a href="https://www.instagram.com/team_enigmaticplodder/" target="_blank" rel="noopener noreferrer" class="interest-button">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
