--- a/index.html
+++ b/index.html
@@ -1503,12 +1503,12 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <div class="cert-grid" id="certGrid">
           <!-- visible 3 -->
           <div class="cert-card card fade-in cert-visible">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera-%20Foundations%20of%20BI%20-%20Google-1.png" alt="Google Foundations of Business Intelligence" loading="lazy" /></div>
+          <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera%20Google-%20Foundations%20of%20Business%20Intelligence-%2040NF9EBUO2N8.png" alt="Google Foundations of Business Intelligence" loading="lazy" /></div>
             <div class="cert-content">
               <h3 class="cert-title">Foundations of Business Intelligence</h3>
               <p class="cert-issuer">Google via Coursera</p>
               <p class="cert-date">2025</p>
-              <a href="./documents/certifications/Coursera- Foundations of BI - Google.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
+              <a href="./documents/certifications/Coursera Google- Foundations of Business Intelligence- 40NF9EBUO2N8.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
             </div>
           </div>
 
