--- a/index.html
+++ b/index.html
@@ -1114,11 +1114,10 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
               <div class="journey-details-modern" id="journey-3">
                 <div class="details-content">
                   <ul class="details-list">
-                    <li> Created Tableau dashboards aligned with RBM guidelines, automating trial monitoring and reducing manual effort by 50% while strengthening audit readiness.</li>
-                    <li>Collaborated with global stakeholders to design risk-assessment tools ensuring ICH-GCP compliance, enabling proactive identification of trial risks.</li>
-                    <li>Standardized data cleaning, version control, and consistency checks, improving reporting accuracy and reducing turnaround time by 30%.</li>
+                    <li>Revamped the entire Business Intelligence pipeline for a global pharmaceutical giant, tracking 100M+ in brand performance through strategic portfolio launches.</li>
                     <li>Conducted internal training sessions on hybrid workplace onboarding and analytics proof-of-concepts, boosting adoption of BI practices across teams.</li>
                     <li>Built portfolio tracking systems covering 110+ R&D initiatives, providing executives with visibility into a $75M+ pipeline and accelerating regulatory preparation timelines from weeks to days.</li>
+                    <li>Transitioned from creating reports into driving end to end BI initiatives.</li>
                   </ul>
                   <div class="journey-achievements"><span class="achievement-tag">Award</span><span class="achievement-tag">Brand Analytics</span><span class="achievement-tag">Strategy</span></div>
                 </div>
@@ -1148,7 +1147,6 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
                 <li>	Risk & Compliance Alignment: Collaborated with global stakeholders to design risk-assessment and monitoring tools, ensuring adherence to ICH-GCP standards.</li>
                 <li> 	Data Governance & Accuracy: Standardized data cleaning, version control, and consistency checks, improving reporting accuracy and reducing turnaround time by 30%.</li>
                 <li>	Knowledge Sharing & Enablement: Conducted internal trainings on hybrid workplace onboarding and advanced analytics proof-of-concepts, fostering adoption of BI best practices.</li>
-                <li>	Operational Visibility: Designed tracking systems for clinical portfolios (110+ R&D initiatives, $75M+ pipeline), giving executives real-time insight into trial readiness and risk exposure.</li>
       
                   </ul>
                   <div class="journey-achievements"><span class="achievement-tag">Clinical Ops</span><span class="achievement-tag">Process</span><span class="achievement-tag">QA</span></div>
