--- a/index.html
+++ b/index.html
@@ -1143,10 +1143,10 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
                 <div class="details-content">
                   <ul class="details-list">
                     
-                <li>  Automated Clinical Trial Monitoring: Created Tableau dashboards aligned with RBM guidelines, cutting manual monitoring effort by 50% and strengthening audit readiness.</li>
-                <li>	Risk & Compliance Alignment: Collaborated with global stakeholders to design risk-assessment and monitoring tools, ensuring adherence to ICH-GCP standards.</li>
-                <li> 	Data Governance & Accuracy: Standardized data cleaning, version control, and consistency checks, improving reporting accuracy and reducing turnaround time by 30%.</li>
-                <li>	Knowledge Sharing & Enablement: Conducted internal trainings on hybrid workplace onboarding and advanced analytics proof-of-concepts, fostering adoption of BI best practices.</li>
+                <li>  Applied concepts of Risk Based Monitoring in clinical trials to design comprehensive multi-client reporting structures, cutting manual monitoring efforts by 75% and enabling high risk/issue alertness for clinical teams.</li>
+                <li>	Collaborated with global stakeholders to design risk-assessment and monitoring tools, ensuring adherence to ICH-GCP standards.</li>
+                <li> 	Standardized data cleaning, version control, and consistency checks, improving reporting accuracy and reducing turnaround time by 30%.</li>
+                <li>	Conducted internal trainings on hybrid workplace onboarding and advanced analytics proof-of-concepts, fostering adoption of BI best practices.</li>
       
                   </ul>
                   <div class="journey-achievements"><span class="achievement-tag">Clinical Ops</span><span class="achievement-tag">Process</span><span class="achievement-tag">QA</span></div>
