--- a/index.html
+++ b/index.html
@@ -1505,118 +1505,225 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
   </div>
 </section>
 
-    <!-- CERTIFICATIONS -->
-    <section id="certifications" aria-label="Certifications">
-      <div class="container">
-        <div class="section-header fade-in">
-          <span class="section-label">Credentials</span>
-          <h2 class="section-title">Certifications</h2>
-          <p class="section-subtitle">Validations across Analytics, AI, and Clinical Research</p>
-        </div>
+ <!-- CERTIFICATIONS -->
+<section id="certifications" aria-label="Certifications">
+  <div class="container">
+    <div class="section-header fade-in">
+      <span class="section-label">Credentials</span>
+      <h2 class="section-title">Certifications</h2>
+      <p class="section-subtitle">Click the section name to view certificates.</p>
+    </div>
 
-        <div class="cert-grid" id="certGrid">
-          <!-- visible 3 -->
-          <div class="cert-card card fade-in cert-visible">
-          <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera%20Google-%20Foundations%20of%20Business%20Intelligence-%2040NF9EBUO2N8.png" alt="Google Foundations of Business Intelligence" loading="lazy" /></div>
-            <div class="cert-content">
-              <h3 class="cert-title">Foundations of Business Intelligence</h3>
-              <p class="cert-issuer">Google via Coursera</p>
-              <p class="cert-date">2025</p>
-              <a href="./documents/certifications/Coursera Google- Foundations of Business Intelligence- 40NF9EBUO2N8.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
-            </div>
+    <!-- GOOGLE BUSINESS INTELLIGENCE PATHWAY -->
+    <details class="card fade-in" open>
+      <summary style="cursor:pointer;display:flex;align-items:center;justify-content:space-between;gap:1rem;font-weight:800;font-size:1.05rem">
+        <span>Google Business Intelligence Pathway</span>
+        <span aria-hidden="true">▾</span>
+      </summary>
+      <div class="cert-grid" style="margin-top:1rem">
+        <!-- Comprehensive Certificate -->
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/Coursera- Google Business Intelligence - Comprehensive - HNLTRCZORX4O.jpg"
+                 alt="Google Business Intelligence Pathway" />
           </div>
-
-          <div class="cert-card card fade-in cert-visible">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/IBM%20AI%20Foundations%20for%20Everyone%20Coursera%2081KHE539ONWB-1.png" alt="IBM AI Foundations for Everyone" loading="lazy" /></div>
-            <div class="cert-content">
-              <h3 class="cert-title">AI Foundations for Everyone</h3>
-              <p class="cert-issuer">IBM via Coursera</p>
-              <p class="cert-date">2025</p>
-              <a href="./documents/certifications/IBM AI Foundations for Everyone Coursera 81KHE539ONWB.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
-            </div>
+          <div class="cert-content">
+            <div class="cert-title">Google Business Intelligence Pathway</div>
+            <div class="cert-issuer">Google (Coursera)</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/Coursera- Google Business Intelligence - Comprehensive - HNLTRCZORX4O.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
           </div>
+        </article>
 
-          <div class="cert-card card fade-in cert-visible">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera-%20GenAI-%20Intro%20%26%20Applications-%20IBM%20CHKHEVSPNRSS-1.png" alt="IBM Generative AI Introduction and Applications" loading="lazy" /></div>
-            <div class="cert-content">
-              <h3 class="cert-title">Generative AI: Introduction and Applications</h3>
-              <p class="cert-issuer">IBM via Coursera</p>
-              <p class="cert-date">2025</p>
-              <a href="./documents/certifications/Coursera- GenAI- Intro & Applications- IBM CHKHEVSPNRSS.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
-            </div>
+        <!-- Foundations of Business Intelligence -->
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/Coursera Google- Foundations of Business Intelligence- 40NF9EBUO2N8.png"
+                 alt="Foundations of Business Intelligence" />
           </div>
-
-          <!-- hidden others -->
-    <div class="cert-card card fade-in cert-hidden">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera%20-%20Power%20BI%20Introduction%20LO2XHKFW1H52-1.png" alt="Power BI Introduction" loading="lazy" /></div>
-            <div class="cert-content">
-              <h3 class="cert-title">Power BI Introduction</h3>
-              <p class="cert-issuer">Coursera</p>
-              <p class="cert-date">2025</p>
-              <a href="./documents/certifications/Coursera - Power BI Introduction LO2XHKFW1H52.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
-            </div>
+          <div class="cert-content">
+            <div class="cert-title">Foundations of Business Intelligence</div>
+            <div class="cert-issuer">Google (Coursera)</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/Coursera Google- Foundations of Business Intelligence- 40NF9EBUO2N8.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
           </div>
+        </article>
 
-          <div class="cert-card card fade-in cert-hidden">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Tableau%20Certified%20Data%20Analyst%20certificate.png" alt="Tableau Certified Data Analyst" loading="lazy" /></div>
-            <div class="cert-content">
-              <h3 class="cert-title">Tableau Certified Data Analyst</h3>
-              <p class="cert-issuer">Salesforce</p>
-              <p class="cert-date">2023</p>
-              <a href="./documents/certifications/Tableau Certified Data Analyst certificate.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
-            </div>
+        <!-- The Path to Insights -->
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/Coursera Google- The Path to Insights- EWYOVO5LPQQC.png"
+                 alt="The Path to Insights: Data Models and Pipelines" />
           </div>
-
-          <div class="cert-card card fade-in cert-hidden">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Tableau%20Desktop%20Specialist%20certificate.png" alt="Tableau Desktop Specialist" loading="lazy" /></div>
-            <div class="cert-content">
-              <h3 class="cert-title">Tableau Desktop Specialist</h3>
-              <p class="cert-issuer">Salesforce</p>
-              <p class="cert-date">2022</p>
-              <a href="./documents/certifications/Tableau Desktop Specialist certificate.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
-            </div>
+          <div class="cert-content">
+            <div class="cert-title">The Path to Insights: Data Models and Pipelines</div>
+            <div class="cert-issuer">Google (Coursera)</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/Coursera Google- The Path to Insights- EWYOVO5LPQQC.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
           </div>
+        </article>
 
-          <div class="cert-card card fade-in cert-hidden">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/AWS%20Machine%20Learning%20Services.png" alt="Amazon Web Services" loading="lazy" /></div>
-            <div class="cert-content">
-              <h3 class="cert-title">AWS- AI and Clinical Research</h3>
-              <p class="cert-issuer">Amazon Web Services (AWS)</p>
-              <p class="cert-date">2021</p>
-              <a href="./documents/certifications/AWS_Certificates.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificates</a>
-            </div>
+        <!-- Decisions, Decisions: Dashboards and Reports -->
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/Coursera Google Business Intelligence-  Decisions, Decisions, Dashboards and Reports - ILIBFO9L3UKB.jpg"
+                 alt="Decisions, Decisions: Dashboards and Reports" />
           </div>
-
-          <div class="cert-card card fade-in cert-hidden">
-            <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Proficiency-%20Clinical%20Trials%20%26%20Monitoring%20certifications-%20Sahil%20Walia-1.png" alt="Clinical Trials & Monitoring Proficiency" loading="lazy" /></div>
-            <div class="cert-content">
-              <h3 class="cert-title">Clinical Research Proficiency</h3>
-              <p class="cert-issuer">Association of Clinical Research Professionals (ACRP)</p>
-              <p class="cert-date">2021</p>
-              <a href="./documents/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificates</a>
-            </div>
+          <div class="cert-content">
+            <div class="cert-title">Decisions, Decisions: Dashboards and Reports</div>
+            <div class="cert-issuer">Google (Coursera)</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/Coursera Google Business Intelligence- Decisions, Decisions, Dashboards and Reports - ILIBFO9L3UKB.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
           </div>
-
-            <div class="cert-card card fade-in cert-hidden">
-            <div class="cert-image">
-              <img src="./images/certifications/thumbnail%20images/six%20sigma%20green%20belt.png" alt="Six Sigma Green Belt" loading="lazy" />
-            </div>
-            <div class="cert-content">
-              <h3 class="cert-title">Six Sigma — Green Belt</h3>
-              <p class="cert-issuer">MSME (Govt. of India)</p>
-              <p class="cert-date">2019</p>
-              <a href="./documents/certifications/six%20sigma%20green%20belt.pdf" target="_blank" rel="noopener noreferrer" class="cert-link-button">View Certificate</a>
-            </div>
-          </div>
-
-       <div class="cert-button-container">
-  <button id="viewAllCertsBtn" class="btn btn-secondary">
-            <span id="certBtnText">View All Certifications</span>
-            <svg id="certBtnIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M6 9l6 6 6-6"/></svg>
-          </button>
-        </div>
+        </article>
       </div>
-    </section>
+    </details>
+
+    <!-- TABLEAU -->
+    <details class="card fade-in">
+      <summary style="cursor:pointer;display:flex;align-items:center;justify-content:space-between;gap:1rem;font-weight:800;font-size:1.05rem">
+        <span>Tableau</span>
+        <span aria-hidden="true">▾</span>
+      </summary>
+      <div class="cert-grid" style="margin-top:1rem">
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/Tableau Certified Data Analyst certificate.png"
+                 alt="Tableau Certified Data Analyst" />
+          </div>
+          <div class="cert-content">
+            <div class="cert-title">Tableau Certified Data Analyst</div>
+            <div class="cert-issuer">Salesforce Tableau</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/Tableau Certified Data Analyst certificate.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
+          </div>
+        </article>
+
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/Tableau Desktop Specialist certificate.png"
+                 alt="Tableau Desktop Specialist" />
+          </div>
+          <div class="cert-content">
+            <div class="cert-title">Tableau Desktop Specialist</div>
+            <div class="cert-issuer">Salesforce Tableau</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/Tableau Desktop Specialist certificate.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
+          </div>
+        </article>
+      </div>
+    </details>
+
+    <!-- IBM -->
+    <details class="card fade-in">
+      <summary style="cursor:pointer;display:flex;align-items:center;justify-content:space-between;gap:1rem;font-weight:800;font-size:1.05rem">
+        <span>IBM</span>
+        <span aria-hidden="true">▾</span>
+      </summary>
+      <div class="cert-grid" style="margin-top:1rem">
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/IBM AI Foundations for Everyone Coursera 81KHE539ONWB-1.png"
+                 alt="IBM AI Foundations for Everyone" />
+          </div>
+          <div class="cert-content">
+            <div class="cert-title">AI Foundations for Everyone</div>
+            <div class="cert-issuer">IBM (Coursera)</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/IBM AI Foundations for Everyone Coursera 81KHE539ONWB.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
+          </div>
+        </article>
+
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/Coursera- GenAI- Intro & Applications- IBM CHKHEVSPNRSS-1.png"
+                 alt="GenAI: Intro & Applications" />
+          </div>
+          <div class="cert-content">
+            <div class="cert-title">GenAI: Intro & Applications</div>
+            <div class="cert-issuer">IBM (Coursera)</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/Coursera- GenAI- Intro & Applications- IBM CHKHEVSPNRSS.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
+          </div>
+        </article>
+      </div>
+    </details>
+
+    <!-- MISCELLANEOUS -->
+    <details class="card fade-in">
+      <summary style="cursor:pointer;display:flex;align-items:center;justify-content:space-between;gap:1rem;font-weight:800;font-size:1.05rem">
+        <span>Miscellaneous</span>
+        <span aria-hidden="true">▾</span>
+      </summary>
+      <div class="cert-grid" style="margin-top:1rem">
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/Coursera - Power BI Introduction LO2XHKFW1H52-1.png"
+                 alt="Power BI Introduction" />
+          </div>
+          <div class="cert-content">
+            <div class="cert-title">Power BI Introduction</div>
+            <div class="cert-issuer">Google BI Track (Coursera)</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/Coursera - Power BI Introduction LO2XHKFW1H52.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
+          </div>
+        </article>
+
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/AWS Machine Learning Services.png"
+                 alt="AWS Certificates" />
+          </div>
+          <div class="cert-content">
+            <div class="cert-title">AWS Certificates</div>
+            <div class="cert-issuer">Amazon Web Services</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/AWS_Certificates.pdf"
+               target="_blank" rel="noopener">View Certificates</a>
+          </div>
+        </article>
+
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia-1.png"
+                 alt="Clinical Trials & Monitoring" />
+          </div>
+          <div class="cert-content">
+            <div class="cert-title">Proficiency — Clinical Trials & Monitoring</div>
+            <div class="cert-issuer">Professional Certification</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
+          </div>
+        </article>
+
+        <article class="card cert-card">
+          <div class="cert-image">
+            <img src="./images/certifications/six sigma green belt.png"
+                 alt="Six Sigma Green Belt" />
+          </div>
+          <div class="cert-content">
+            <div class="cert-title">Six Sigma Green Belt</div>
+            <div class="cert-issuer">MSME, Govt. of India</div>
+            <a class="cert-link-button"
+               href="./documents/certifications/six sigma green belt.pdf"
+               target="_blank" rel="noopener">View Certificate</a>
+          </div>
+        </article>
+      </div>
+    </details>
+
+  </div>
+</section>
 
   <!-- BEYOND WORK -->
 <section id="beyond" aria-label="Beyond Work">
