--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <!-- Comprehensive Certificate -->
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera- Google Business Intelligence - Comprehensive - HNLTRCZORX4O.jpg"
+            <img src="./images/certifications/thumbnail images/Coursera- Google Business Intelligence - Comprehensive - HNLTRCZORX4O.jpg"
                  alt="Google Business Intelligence Pathway" />
           </div>
           <div class="cert-content">
@@ -1250,7 +1250,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <!-- Foundations of Business Intelligence -->
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera Google- Foundations of Business Intelligence- 40NF9EBUO2N8.png"
+            <img src="./images/certifications/thumbnail images/Coursera Google- Foundations of Business Intelligence- 40NF9EBUO2N8.png"
                  alt="Foundations of Business Intelligence" />
           </div>
           <div class="cert-content">
@@ -1265,7 +1265,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <!-- The Path to Insights -->
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera Google- The Path to Insights- EWYOVO5LPQQC.png"
+            <img src="./images/certifications/thumbnail images/Coursera Google- The Path to Insights- EWYOVO5LPQQC.png"
                  alt="The Path to Insights: Data Models and Pipelines" />
           </div>
           <div class="cert-content">
@@ -1280,7 +1280,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <!-- Decisions, Decisions: Dashboards and Reports -->
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera Google Business Intelligence-  Decisions, Decisions, Dashboards and Reports - ILIBFO9L3UKB.jpg"
+            <img src="./images/certifications/thumbnail images/Coursera Google Business Intelligence-  Decisions, Decisions, Dashboards and Reports - ILIBFO9L3UKB.jpg"
                  alt="Decisions, Decisions: Dashboards and Reports" />
           </div>
           <div class="cert-content">
@@ -1303,7 +1303,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
       <div class="cert-grid" style="margin-top:1rem">
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Tableau Certified Data Analyst certificate.png"
+            <img src="./images/certifications/thumbnail images/Tableau Certified Data Analyst certificate.png"
                  alt="Tableau Certified Data Analyst" />
           </div>
           <div class="cert-content">
@@ -1317,7 +1317,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Tableau Desktop Specialist certificate.png"
+            <img src="./images/certifications/thumbnail images/Tableau Desktop Specialist certificate.png"
                  alt="Tableau Desktop Specialist" />
           </div>
           <div class="cert-content">
@@ -1340,7 +1340,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
       <div class="cert-grid" style="margin-top:1rem">
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/IBM AI Foundations for Everyone Coursera 81KHE539ONWB-1.png"
+            <img src="./images/certifications/thumbnail images/IBM AI Foundations for Everyone Coursera 81KHE539ONWB-1.png"
                  alt="IBM AI Foundations for Everyone" />
           </div>
           <div class="cert-content">
@@ -1354,7 +1354,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera- GenAI- Intro & Applications- IBM CHKHEVSPNRSS-1.png"
+            <img src="./images/certifications/thumbnail images/GenAI- Intro & Applications- IBM CHKHEVSPNRSS-1.png"
                  alt="GenAI: Intro & Applications" />
           </div>
           <div class="cert-content">
