--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/thumbnail images/GenAI- Intro & Applications- IBM CHKHEVSPNRSS-1.png"
+            <img src="./images/certifications/thumbnail images/Coursera- GenAI- Intro & Applications- IBM CHKHEVSPNRSS-1.png"
                  alt="GenAI: Intro & Applications" />
           </div>
           <div class="cert-content">
@@ -1377,7 +1377,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
       <div class="cert-grid" style="margin-top:1rem">
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera - Power BI Introduction LO2XHKFW1H52-1.png"
+            <img src="./images/certifications/thumbnail images/Coursera - Power BI Introduction LO2XHKFW1H52-1.png"
                  alt="Power BI Introduction" />
           </div>
           <div class="cert-content">
@@ -1391,7 +1391,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/AWS Machine Learning Services.png"
+            <img src="./images/certifications/thumbnail images/AWS Machine Learning Services.png"
                  alt="AWS Certificates" />
           </div>
           <div class="cert-content">
@@ -1405,7 +1405,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia-1.png"
+            <img src="./images/certifications/thumbnail images/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia-1.png"
                  alt="Clinical Trials & Monitoring" />
           </div>
           <div class="cert-content">
@@ -1419,7 +1419,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/six sigma green belt.png"
+            <img src="./images/certifications/thumbnail images/six sigma green belt.png"
                  alt="Six Sigma Green Belt" />
           </div>
           <div class="cert-content">
